tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/AbstractErrorReportingTests#tearDown().mjava
	@AfterList
	public void tearDown() throws Exception {
		TestUtils.deleteProject(project);
	}

